--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [workspace]
 members = [
-  "dna/zomes/threads_integrity",
-  "dna/zomes/threads",
-  "dna/zomes/profiles_integrity",
-  "dna/zomes/profiles"
+  "dna/zomes/perf_testing_integrity",
+  "dna/zomes/perf_testing"
   ]
 
 [workspace.package]
@@ -15,7 +13,6 @@ edition = "2021"
 serde = { version = "1.0", default-features = false }
 hdi = { version = "=0.2.2", default-features = false }
 hdk = { version = "=0.1.2", default-features = false }
-zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-1.2" }
 
 
 [profile.dev]
